--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -4,7 +4,7 @@
 		
 		<div class="">	
 			
-			<h1 class="big-title-text">The most comprehensive grad & internship job list that you love</span></h1>
+			<p class="big-title-text">The most comprehensive grad & internship job list that you love</span></p>
 			<p class="intro-text">Sourced by you and your friends </br> <%= User.count %> friends are using our Groups, Info, Chat and Meetings to help each
 				other get jobs
 				 </p>
