--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
 			<div class="offset1 span2">
 				<div class="left-bar">
 					<div class="center-alignment">
-					<h4 class="sign-up-text">Create my account</h4>
+					<h4 class="sign-up-text">Better when you sign up!</h4>
 					</div>
 					<%=form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 						
