--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -1,16 +1,17 @@
 .header
-	.container-fluid
+	.container
 		.row-fluid
 			.span3
 				= link_to image_tag('menulogo.png'), root_path 
 			
 			.span6
-				=link_to my_jobs_path do
-					.my-jobs-button
-						%i( class="icon-pencil")
-						&nbsp My Jobs &nbsp 
-						%span( class="badge badge-important")
-							= current_user.app_list_count
+				.visible-desktop
+					=link_to my_jobs_path do
+						.my-jobs-button
+							%i( class="icon-pencil")
+							&nbsp My Jobs &nbsp 
+							%span( class="badge badge-important")
+								= current_user.app_list_count
 				=link_to jobs_path do
 					.my-jobs-button
 						%i(class="icon-briefcase")
@@ -30,5 +31,6 @@
 					= link_to edit_user_registration_path do
 						.account-button					
 							Settings
-					.account-button
-						= link_to 'Log Out', destroy_user_session_path, :method =>"DELETE"
+					=link_to destroy_user_session_path, :method =>"DELETE" do
+						.account-button
+							Log Out
