--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -6,7 +6,7 @@
 			
 			.span6
 				.visible-desktop
-					=link_to my_jobs_path do
+					=link_to root_path do
 						.my-jobs-button
 							%i( class="icon-pencil")
 							&nbsp My Jobs &nbsp 
@@ -34,3 +34,10 @@
 					=link_to destroy_user_session_path, :method =>"DELETE" do
 						.account-button
 							Log Out
+.search-header
+	.container
+		.row-fluid
+			.span3
+				
+			.span6
+				= render 'layouts/swiftype'
