--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 	  <%= csrf_meta_tags %>
 	  <%= favicon_link_tag 'favicon.ico' %>
 	  <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
+	  <script type="text/javascript" src="path/to/instafeed.min.js"></script>
  	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 	</head>
@@ -21,7 +22,7 @@
 			</div>
 		<% else %>
 			<%=render 'staticpages/copywritearea'%>
-			<%= yield %>			
+			<%= yield %>	
 			<% cache "footer" do %>
 				<%=render 'layouts/footer'%>
 			<% end %>
