--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -30,7 +30,7 @@
 		
 	.span3
 		%h4(class="applist-area")
-			\#rq #jobapps #ughapps
+			\#resumequery #jobapps 
 		=render 'layouts/instagram_feed'
+		#rQfeed
 		#instafeed
-			test
