--- a/app/views/layouts/_instagram_feed.html.erb
+++ b/app/views/layouts/_instagram_feed.html.erb
@@ -1,12 +1,32 @@
 <script type="text/javascript">
-    var feed = new Instafeed({
-        get: 'popular',
-        tagName: 'awesome',
-		  limit: '5',
+    
+	var jobappsFeed = new Instafeed({
+		target: 'instafeed',
+	   get: 'tagged',
+	   tagName: 'jobapps',
+		  limit: '1',
+		sortBy: 'random',
+	    clientId: 'dff714fb915a45459648a1fa496037fe',
+		  resolution: 'low_resolution',
+	    template: '<a class="animation" href="{{link}}"><img src="{{image}}" /></a>'
+	});
+
+	var rQfeed = new Instafeed({
+		target:'rQfeed',
+       get: 'tagged',
+       tagName: 'resumequery',
+		  limit: '1',
         clientId: 'dff714fb915a45459648a1fa496037fe',
+		  resolution: 'low_resolution',
         template: '<a class="animation" href="{{link}}"><img src="{{image}}" /></a>'
     });
-    feed.run();
+
+
+	 rQfeed.run();
+    jobappsFeed.run();
+
+
+
 </script>
 
 <div id="instafeed"></div>
