--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -5,13 +5,14 @@
 				= link_to image_tag('menulogo.png'), root_path 
 			
 			.span6
-				.visible-desktop
-					=link_to root_path do
-						.my-jobs-button
-							%i( class="icon-pencil")
-							&nbsp My Jobs &nbsp 
-							%span( class="badge badge-important")
-								= current_user.app_list_count
+				-if signed_in?
+					.visible-desktop
+						=link_to root_path do
+							.my-jobs-button
+								%i( class="icon-pencil")
+								&nbsp My Jobs &nbsp 
+								%span( class="badge badge-important")
+									= current_user.app_list_count
 				=link_to jobs_path do
 					.my-jobs-button
 						%i(class="icon-briefcase")
@@ -21,23 +22,37 @@
 					.my-jobs-button
 						%i(class="icon-certificate")
 						Companies
-
-			
-			
 			.span3
 				.pull-right
-					- if current_user.role == "admin" 
-						=link_to 'Admin', admin_path
-					= link_to edit_user_registration_path do
-						.account-button					
-							Settings
-					=link_to destroy_user_session_path, :method =>"DELETE" do
-						.account-button
-							Log Out
+					-if signed_in?
+						= link_to edit_user_registration_path do
+							.account-button
+								%i(class="icon-user")
+								&nbsp 						
+								= current_user.first_name
+						=link_to destroy_user_session_path, :method =>"DELETE" do
+							.account-button
+								Log Out
+					-else
+						=link_to new_user_registration_path do
+							.account-button
+								Sign Up
+						=link_to new_user_session_path do
+							.account-button
+								Login
+
 .search-header
 	.container
 		.row-fluid
 			.span3
-				
+				.tiny-pad
+					=link_to "Graduate Jobs", root_path
+					&nbsp &nbsp &nbsp
+					=link_to "Internships", root_path
 			.span6
 				= render 'layouts/swiftype'
+				
+			.span3
+				.pull-right
+					.tiny-pad-right
+						Add to our list of jobs
