--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -4,21 +4,20 @@
 	.span6
 		%h4(class="applist-area")
 			Jobs Area &nbsp - &nbsp
-			
-			
 		-@jobs.each do |job|
 			.appManage
-				%b= job.show_company_name
-				- 
-				=job.name
-				
-				=link_to "Follow", root_path
-				
+				.pad-lightly
+					%b= job.show_company_name
+					- 
+					=job.name
+					.pull-right
+						=job.show_due_date
+						&nbsp &nbsp 
+						=link_to "Follow", new_user_registration_path, :class => "follow-button"
 		%span(class="small-text") Export to excel (coming soon)
 	.span3
 		%h4(class="applist-area")
 			Discover
-		
 	.span3
 		%h4(class="applist-area")
 			\#resumequery #jobapps 
