--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -690,3 +690,10 @@ h3 {
 .pad-lightly{
 	padding-bottom:5px;
 }
+
+
+.info-box-yellow{
+	padding:10px;
+	border-radius: 4px;
+	background-color:#f238f2;
+}
