--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -46,7 +46,7 @@
 		.row-fluid
 			.span3
 				.tiny-pad
-					=link_to "Graduate Jobs", root_path
+					=link_to "Graduate Jobs", graduate_jobs_path
 					&nbsp &nbsp &nbsp
 					=link_to "Internships", root_path
 			.span6
