--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -1,1 +1,10 @@
-hello
+.row-fluid
+	.span12
+		%h3 About us
+
+
+.row-fluid
+	.about-area
+		.span6
+			.about-text
+				%p ResumeQuery is a graduate job and internship listing website.
