--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -48,7 +48,7 @@
 				.tiny-pad
 					=link_to "Graduate Jobs", graduate_jobs_path
 					&nbsp &nbsp &nbsp
-					=link_to "Internships", root_path
+					=link_to "Internships", internships_path
 			.span6
 				= render 'layouts/swiftype'
 				
