changed jobs index

--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -30,7 +30,7 @@
 		
 	.span3
 		%h4(class="applist-area")
-			\#resumequery #jobapps 
+			\#icecream #jobapps 
 		=render 'layouts/instagram_feed'
 		#rQfeed
 		#instafeed
