--- a/app/views/layouts/_instagram_feed.html.erb
+++ b/app/views/layouts/_instagram_feed.html.erb
@@ -14,7 +14,7 @@
 	var rQfeed = new Instafeed({
 		target:'rQfeed',
        get: 'tagged',
-       tagName: 'jobs',
+       tagName: 'jobapps',
 		  limit: '1',
 
         clientId: 'dff714fb915a45459648a1fa496037fe',
