--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -25,9 +25,7 @@
 								=job.show_due_date
 		%span(class="small-text") Export to excel (coming soon)
 	.span3
-		%h4(class="applist-area")
-			Discover
-		
+		=render 'layouts/discover'
 	.span3
 		%h4(class="applist-area")
 			\#icecream #jobapps 
