--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -1,10 +1,17 @@
+.dashboard
+
 .row-fluid
-	.span12
+	.span6
 		%h3 About us
 
 
 .row-fluid
-	.about-area
-		.span6
+	.span6
+		.about-area
 			.about-text
-				%p ResumeQuery is a graduate job and internship listing website.
+				%p ResumeQuery is a graduate job and internship listing website. We are the most comprehensive list of reputable graduate and internship jobs in Australia to students.
+				%br
+				%p Our aim is to get you quickly applying for the best jobs in industry when it's time to.
+	.span3
+		.about-area
+			hello
