--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -20,12 +20,7 @@
 								=link_to "Follow", new_user_registration_path, :class => "follow-button"
 		%span(class="small-text") Export to excel (coming soon)
 	.span3
-		%h4(class="applist-area")
-			Discover
-		.info-box-yellow
-			.center-alignment
-				%h5 Prepare during off season!	
-		
+		=render 'layouts/discover'
 	.span3
 		%h4(class="applist-area")
 			\#icecream #jobapps 
