--- a/app/views/jobs/index.haml
+++ b/app/views/jobs/index.haml
@@ -23,7 +23,7 @@
 												= form_for(current_user.app_lists.build, :as => :applist) do |f|
 													= f.hidden_field :job_id, :value => j.id
 													= f.hidden_field :status, :value => "Research"
-													= f.submit "Add to My Jobs", class: "btn btn-info"
+													= f.submit "Follow", class: "follow-button"
 
 	.span3
 		%h4 Filter by Discipline:
