updated the sign up page

--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -9,9 +9,9 @@
 	.span6
 		.about-area
 			.about-text
-				%p ResumeQuery is a graduate job and internship listing website. We are the most comprehensive list of reputable graduate and internship jobs in Australia to students.
+				%p ResumeQuery is a graduate job and internship listing website. We are comprehensive, reputable and value students first. Our promise is to never hide information or make it harder for you to find the opportunities your looking for to make money.
 				%br
 				%p Our aim is to get you quickly applying for the best jobs in industry when it's time to.
 	.span3
-		.about-area
-			hello
+		-#about-area
+	
