--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -745,3 +745,19 @@ h3 {
 
 }
 
+
+.sign-up-button{
+	min-width:99%;
+	padding: 3px 15px;
+	color:white;
+	border-radius: 4px;
+	border:0px !important;
+	background-color:#54bb62;
+}
+
+.sign-up-button:hover, .sign-up-button:focus {
+    background: $dark-green;
+    text-decoration: none;
+
+}
+
