--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -9,9 +9,9 @@
 	.span6
 		.about-area
 			.about-text
-				%p ResumeQuery is a graduate job and internship listing website. We are comprehensive, reputable and value students first. Our promise is to never hide information or make it harder for you to find the opportunities your looking for to make money.
+				%p ResumeQuery is a graduate job and internship listing website. We are comprehensive, reputable and value students first. Our promise is to never hide useful information from you or make it harder for you to find the opportunities your looking for. Our guiding principle is to give every student the opportunities we had when we applied for our grad jobs.
 				%br
-				%p Our aim is to get you quickly applying for the best jobs in industry when it's time to.
+				%p To do this, our website is an open and editable job listing platform.
 	.span3
 		-#about-area
 	
