--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -55,4 +55,5 @@
 			.span3
 				.pull-right
 					.tiny-pad-right
-						Add to our list of jobs
+						=link_to "Add to our list of jobs", new_company_path
+						
