--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -9,9 +9,11 @@
 	.span6
 		.about-area
 			.about-text
-				%p ResumeQuery is a graduate job and internship listing website. We are comprehensive, reputable and value students first. Our promise is to never hide useful information from you or make it harder for you to find the opportunities your looking for. Our guiding principle is to give every student the opportunities we had when we applied for our grad jobs.
+				%p ResumeQuery is a graduate job and internship listing website. We are comprehensive, reputable and value students first. Our promise to you is that we will never hide useful information from you or make it harder for you to find the opportunities your looking for just for us to make a profit. 
 				%br
-				%p To do this, our website is an open and editable job listing platform.
+				%p Our guiding principle is to give every student the opportunities we had when we applied for our internship & grad jobs.
+				%br
+				%p To do this, our website is an open and editable job listing platform, where you can save jobs to your list of apps to do.
 	.span3
 		-#about-area
 	
