--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -720,7 +720,16 @@ h3 {
 	background-color:#D1E6E4;
 }
 
-
+.info-box-light-orange{
+	border-radius: 4px;
+	background-color:#FCE9D5;
+	padding:10px;
+	margin-top:15px;
+	color:$light-text-grey;
+	h5{
+		color:$dark-red;
+	}
+}
 
 
 .about-text{
