--- a/app/views/jobs/index.haml
+++ b/app/views/jobs/index.haml
@@ -1,6 +1,11 @@
 .dashboard
 .row-fluid
 	.span6.jobIndex
+		.info-box-light-orange
+			%h5 Filter by Discipline:
+			= select_tag :category_id, options_from_collection_for_select(Category.all, "id", "discipline"), include_blank: true, :onchange => "this.form.submit()"
+		.dashboard
+	
 		%h4(class="applist-area")
 			Jobs Opportunities
 		%ul.unstyled
@@ -26,5 +31,3 @@
 													= f.submit "Follow", class: "follow-button job-index"
 
 	.span3
-		%h4 Filter by Discipline:
-		= select_tag :category_id, options_from_collection_for_select(Category.all, "id", "discipline"), include_blank: true, :onchange => "this.form.submit()"        
