--- a/app/views/jobs/edit.haml
+++ b/app/views/jobs/edit.haml
@@ -1,11 +1,11 @@
-.container
-	.row
+.dashboard
+	.row-fluid
 		.span6
 			= form_for @job, :as => :jobs do |f|
 				-if current_user.role == 'admin'
 					= f.text_field :name, :placeholder => "Name"
 				-else
-					=@job.name
+					%h4=@job.name
 			
 				= f.collection_select :category_id, Category.order(:discipline), :id, :discipline, include_blank: true
 				= f.text_area :info, :placeholder => "Information"
@@ -15,6 +15,7 @@
 				= f.hidden_field :id, :value => params[:id]
 				= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true
 				= f.text_field :location, :placeholder => "Location"
-				Is this job open? #{f.check_box :open, {}, "t", "f"}
+				- if current_user.role == "admin"
+					Is this job open? #{f.check_box :open, {}, "t", "f"}
 				= f.submit
 				= link_to "Delete This Job", @job, method: :delete, data: { confirm: 'You Sure?'}                     
