--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -13,7 +13,7 @@
 				%br
 				%p Our guiding principle is to give every student the opportunities we had when we applied for our internship & grad jobs.
 				%br
-				%p To do this, our website is an open and editable job listing platform, where you can save jobs to your list of apps to do.
+				%p To do this, our website is an open and editable job listing platform, where you can save jobs to your list of apps to do. It is built to get you the job information you need as fast and in its most actionable form as possible.
 	.span3
 		-#about-area
 	
