--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -32,7 +32,7 @@
 		=render 'layouts/discover'
 	.span2
 		%h4(class="applist-area")
-			\#icecream #jobapps 
+			\ #jobapps 
 		=render 'layouts/instagram_feed'
 		#rQfeed
 		#instafeed
