--- a/app/views/layouts/_discover.haml
+++ b/app/views/layouts/_discover.haml
@@ -10,11 +10,11 @@
 	.info-box-light-teal
 		.center-alignment
 			=  image_tag('unsw.png')
-			%h5 At UNSW? Don't lose a chance to stand out.
+			%h5 At UNSW? Don't lose a chance to stand out
 			There's a brilliant team at UNSW Careers & Employment waiting to improve your resume and apps. Get in before its busy.
 			
 .info-box-light-orange
 	.center-alignment
 		=  image_tag('atom.png')
-		%h5 This is an open platform. Anyone can edit and add jobs or companies.
-		Help build a powerful database of the best jobs for students so they can make the world a better place.
+		%h5 ResumeQuery is an open platform
+		Anyone can edit and add jobs or companies.Help build a powerful database of the best jobs for students so they can make the world a better place.
