--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -2,11 +2,7 @@
 
 .row-fluid
 	.span7
-		- if @appList.count == 0
-		
-			=render 'layouts/quick_follow' 
-		
-		- else 
+		- if @appList.count != 0
 			%h4(class="applist-area")
 				My Jobs List &nbsp - &nbsp
 				= current_user.app_list_count
@@ -32,6 +28,8 @@
 										=job.show_due_date
 								-else 
 									=job.show_due_date
+		-elsif @appList.count < 6
+			=render 'layouts/quick_follow' 
 									
 									
 			%span(class="small-text") Export to excel (coming soon)
@@ -45,8 +43,4 @@
 		#instafeed
 
 
-- @category.each do |category|
-	= form_for :quicklist, :url => {:action=>"add_quick_follow_list"} do |f|
-		=f.hidden_field :follow_number, :value => category.id
-		=f.submit "#{category.discipline}", :class => "sign-up-button"
 
