--- a/app/views/layouts/_quick_follow.haml
+++ b/app/views/layouts/_quick_follow.haml
@@ -1,6 +1,7 @@
-.row-fluid
-	- @category.each do |category|
-		.span4
-			= form_for :quicklist, :url => {:action=>"add_quick_follow_list"} do |f|
-				=f.hidden_field :follow_number, :value => category.id
-				=f.submit "#{category.discipline}", :class => "sign-up-button"
+- @category.each_slice(4).to_a.each do |category_group|
+	.row-fluid	
+		-category_group.each do |category|
+			.span4		
+				= form_for :quicklist, :url => {:action=>"add_quick_follow_list"} do |f|
+					=f.hidden_field :follow_number, :value => category.id
+					=f.submit "#{category.discipline}", :class => "quicklist-box"	
