--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -7,28 +7,27 @@
 				My Jobs List &nbsp - &nbsp
 				= current_user.app_list_count
 			
-			- @appList.each do |apps|
-
-				- job = apps.find_job
-				- company = job.find_company
-			
-				= link_to apps do 
-					.appManage
-						.row-fluid
-							.span8
-								%b= company.name 
-								\ &nbsp - &nbsp
-								= job.name 
-							.span2
-								%span(class="red-text")=apps.status
-							.span2
-								.pull-right
-								-if job.show_due_date == "Closed"
-									%span(class="red-text")
-										=job.show_due_date
-								-else 
+		- @appList.each do |apps|
+			- job = apps.find_job
+			- company = job.find_company
+		
+			= link_to apps do 
+				.appManage
+					.row-fluid
+						.span8
+							%b= company.name 
+							\ &nbsp - &nbsp
+							= job.name 
+						.span2
+							%span(class="red-text")=apps.status
+						.span2
+							.pull-right
+							-if job.show_due_date == "Closed"
+								%span(class="red-text")
 									=job.show_due_date
-		-elsif @appList.count < 6
+							-else 
+								=job.show_due_date
+		-if @appList.count < 6
 			=render 'layouts/quick_follow' 
 									
 									
