made the discipline list alphabetical

--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -21,7 +21,7 @@
 								-else 
 									=job.show_due_date
 								&nbsp &nbsp 
-								=link_to "Follow", new_user_registration_path, :class => "follow-button"
+								=link_to "Follow Job", new_user_registration_path, :class => "follow-button"
 		%span(class="small-text") Export to excel (coming soon)
 	.offset1.span2
 		=render 'layouts/discover'
