added styling around disciplines

--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -3,7 +3,7 @@
 .row-fluid
 	.span7
 		- if @appList.count != 0
-			%h4(class="applist-area")
+			%h4(class="applist-area orange-text")
 				My Jobs List &nbsp - &nbsp
 				= current_user.app_list_count
 			
@@ -30,11 +30,11 @@
 										=job.show_due_date
 									&nbsp	
 									= link_to content_tag(:i, "", class: "icon-trash", :data => {:app_id => apps.id}), apps,remote: true, method: :delete
-
+		-if (@appList.count > 0)&&(@appList.count <6)
+			.dashboard
 		-if @appList.count < 6
 			=render 'layouts/quick_follow' 
-									
-									
+				
 			%span(class="small-text") Export to excel (coming soon)
 	.offset1.span2
 		=render 'layouts/discover'
