--- a/app/views/layouts/_quick_follow.haml
+++ b/app/views/layouts/_quick_follow.haml
@@ -1,3 +1,6 @@
+%h6(class="applist-area")
+	Click to quickly add all the jobs within your discipline
+
 - @category.each_slice(4).to_a.each do |category_group|
 	.row-fluid	
 		-category_group.each do |category|
