--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -2,7 +2,7 @@
 
 .row-fluid
 	.span7
-		%h4(class="applist-area")
+		%h4(class="applist-area orange-text")
 			Jobs & Internships
 		-@jobs.each do |job|
 			=link_to job do 
